Fix anchor tag spacing with margin and padding

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -56,4 +56,6 @@ ul {
   list-style-type: none;
   display: flex;
   gap: 16px;
+  margin: 0;
+  padding: 0;
 }
